Block settings menu: Fix z-index issues

--- a/editor/block-settings-menu/style.scss
+++ b/editor/block-settings-menu/style.scss
@@ -15,12 +15,14 @@
 
 .editor-block-settings-menu__content {
 	margin-top: 8px;
+	z-index: z-index( '.editor-block-settings-menu__content' );
 }
 
 .editor-block-settings-menu__toggle {
 	transform: rotate( 90deg );
 	transition-duration: 0.3s;
 	transition-property: transform;
+	z-index: z-index( '.editor-block-settings-menu__toggle' );
 
 	&.is-opened {
 		transform: rotate(0);
